@@ -95,6 +95,7 @@
     * 4083 Web API: Always output full traceback in case of non Check_MK unhandled exceptions
     * 4135 View CSV export: Group cells are added in front of the regular cells for each row...
     * 4136 Availability CSV export: Adding grouping title as first column in case of grouped views
+    * 4169 View action: sticky, notification and persistent default configuration can be set for acknownledge commands in host or service views
     * 3974 FIX: Sorting comments in hover menu of comments icon by time now
     * 4040 FIX: Fix error in view about "No WATO folder ..." in case of host imported via cmcdump...
     * 4046 FIX: Repaired html rendering....
